# amarantos

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  derive_nutrient_estimates.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml
amarantos/: __init__.py  cli.py  list.py  rank.py
amarantos/core/: __init__.py  bib.py  cli.py  list.py  loaders.py  roi.py  schemas.py
amarantos/data/refs/: a2016_validation.yaml  a2017_pomegranate.yaml  a2021_dietary.yaml  a2021_effectiveness.yaml  a2021_total.yaml  a2024_curcumin.yaml  a2025_benefits.yaml  aa2018_chlorella.yaml  ae2022_daily.yaml  aha2022_cold.yaml  akhgarjand2022_ashwagandha.yaml  althoff2024_cognitive.yaml  am2024_impact.yaml  anker2025_intravenous.yaml  ar2019_metformin.yaml  aune2016_consumption.yaml  aune2016_nuts.yaml  aune2017_vegetables.yaml  b2022_relationship.yaml  ba2021_prospective.yaml  banach2023_steps.yaml  bannister2014_metformin.yaml  baquerizo-sedano2022_anti.yaml  bhamidipati2019_underreporting.yaml  bondonno2021_vegetable.yaml  brandhorst2015_fmd.yaml  brandhorst2017_fmd.yaml  brown2024_resveratrol.yaml  c2011_relation.yaml  c2014_association.yaml  c2015_changes.yaml  c2024_creatine.yaml  cain2025_cold.yaml  cappuccio2010_sleep.yaml  cc2024_insights.yaml  chase2008_swimming.yaml  ck2016_calorie.yaml  ck2016_long.yaml  ck2019_ownership.yaml  collaborators2012_lowering.yaml  (+168 more)
amarantos/diet/: README.md  __init__.py  cli.py  dietary_nutrients.csv
amarantos/profiles/: __init__.py  cli.py  manager.py
data/choices/diet/: almonds.yaml  alpha_lipoic_acid.yaml  apple_cider_vinegar.yaml  ashwagandha.yaml  astaxanthin.yaml  avocado.yaml  b_vitamins_complex.yaml  berberine.yaml  betaine.yaml  blueberries.yaml  cacao_flavanols.yaml  calcium.yaml  carnitine.yaml  chlorella.yaml  choline.yaml  coffee.yaml  collagen_peptides.yaml  coq10.yaml  creatine.yaml  cruciferous_vegetables.yaml  curcumin_turmeric.yaml  dark_chocolate.yaml  equol.yaml  fatty_fish.yaml  fermented_foods.yaml  fiber.yaml  fisetin.yaml  garlic.yaml  ginger.yaml  glycine.yaml  green_tea.yaml  iron.yaml  leafy_greens.yaml  lion_s_mane_mushroom.yaml  magnesium.yaml  mct_oil.yaml  melatonin.yaml  mushrooms.yaml  nad_precursors.yaml  nuts.yaml  (+21 more)
data/choices/environment/: air_quality.yaml  nature_time.yaml  sun_exposure.yaml
data/choices/exercise/: cycling.yaml  hiit.yaml  moderate_cardio.yaml  neat.yaml  resistance_bands.yaml  strength_training.yaml  stretching_flexibility.yaml  swimming.yaml  vigorous_cardio.yaml  walking.yaml
data/choices/fasting/: caloric_restriction.yaml  intermittent_fasting.yaml  prolonged_fasting.yaml  time_restricted_eating.yaml
data/choices/mind/: breathwork.yaml  cognitive_training.yaml  gratitude_journaling.yaml  meditation.yaml
data/choices/pharmaceutical/: aspirin_low_dose.yaml  hormone_therapy.yaml  metformin.yaml  rapamycin.yaml  statins.yaml
data/choices/sleep/: napping.yaml  sleep_duration.yaml  (+2 more)
data/defaults/: generic_human.yaml
docs/: constitution.md  devnotes.md
methodology/estimation/: README.md  new_entry_rubric.md
resources/: README.md
tests/: test_bib.py  test_cli_alias.py  test_hello.py  test_loaders.py  test_profile_manager.py  test_profile_schema.py  test_user.py
(+188 files in other folders)
