[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "amarantos"
version = "0.1.0"
description = "Tips and tools for personal wellness and longevity"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Zach Kurtz", email = "zkurtz@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pre-commit>=4.0.1",
]

[dependency-groups]
dev = [
    "bump-my-version>=0.30",
    "pre-commit==4.0.1",
    "pytest==8.3.4",
    "ruff==0.8.5",
    "ty==0.0.4",
]

[project.urls]
Repository = "https://github.com/zkurtz/amarantos"

[tool.bumpversion]
allow_dirty = true
commit = false
current_version = "0.1.0"
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.pytest.ini_options]
addopts = "-Werror"
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D202",
    "D203",
    "D213",
    "D401",
    "D413",
]
select = [
    "D",
    "E4",
    "E5",
    "E7",
    "E9",
    "F",
    "I",
    "TID",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104",
]
"test_*.py" = [
    "D",
]

[tool.ty.src]
include = [
    "amarantos",
    "tests",
]

[tool.uv]
package = true
